--- a/config.bash.example
+++ b/config.bash.example
@@ -1,21 +1,22 @@
 #!/bin/bash
 
-SETUP_SSH=true
-SETUP_DIALOUT=true
-INSTALL_STARSHIP=true  # install starship prompt
-INSTALL_ZSH=true       # install zsh & set as default shell
-INSTALL_TOOLS=true     # a set of tools that I like to use (more specific configuration below)
-SETUP_GIT=true         # performs most of the git setup for you
-SETUP_WELCOME_MSG=true # sets up a welcome message for the terminal
+SETUP_SSH=true          # install openssh-server and generate an rsa ssh key
+SETUP_DIALOUT=true      # add the active user to the DIALOUT group (required to access serial connections)
+INSTALL_STARSHIP=true   # install starship prompt
+INSTALL_ZSH=true        # install zsh & set as default shell
+INSTALL_TOOLS=true      # a set of tools that I like to use (more specific configuration below)
+SETUP_GIT=true          # performs most of the git setup for you
+SETUP_WELCOME_MSG=true  # sets up a welcome message for the terminal
 SETUP_BASH=false        # sets up bashrc with my aliases etc
-INSTALL_CCACHE=true    # installs ccache binaries and sets up PATH
+INSTALL_CCACHE=true     # installs ccache binaries and sets up PATH
+DEFAULT_SHELL="zsh"     # zsh or bash
 
 # TOOLS SUBCONFIG (optional extra tools)
 # note: does nothing if INSTALL_TOOLS is set to false
 NCDU=true
 INSTALL_7Z=true
 HTOP=true
-RUST=false
+RUST=true
 MCFLY=true
 ADVCPMV=true
 CLIPBOARD=true
