Update example config descriptions

--- a/config.bash.example
+++ b/config.bash.example
@@ -27,7 +27,7 @@ IS_VM=false             # installs open-vm-tools
 NCDU=true               # NCurses Disk Usage
 INSTALL_7Z=true         # install the latest 7zz binary from github and create the alias 7z
 HTOP=false              # htop - an interactive process viewer
-BTOP=true              # htop - an better interactive process viewer
+BTOP=true               # bashtop - a better interactive process viewer
 RUST=true               # install rustup.rs and add the cargo bin folder to path
 MCFLY=true              # intelligent, context-sensitive shell search history (ctrl-r)
 ADVCPMV=true            # advanced copy/move, use `acp` or `amv` and get a progress bar for your large cp operations
