add a config for cole-desktop (dummy hardware-configuration.nix)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,7 @@ jobs:
       matrix:
         package:
           - cole-laptop
+          - cole-desktop
           - cole-vm
           - cole-wsl2
           - hs-thinkpad
